GNOME Bugzilla – Bug 755002
Alt-Popup menu is always English on non-internal applets
Last modified: 2015-09-26 03:29:57 UTC
Steps to reproduce: 1. Set system locale different from English. 2. Log in into GNOME Flashback. 3. Alt-right click on an internal applet (e.g. Menu Bar, User menu), and check that the popup menu items are displayed on the current system locale. 4. Alt-right click on a non-internal applet (e.g. Show Desktop, Workspace Switcher), and you'll see that the popup menu items are displayed in English instead of the current system locale. Tested with the current gnome-panel git master.