panel-applet: translate edit popup menu items

https://bugzilla.gnome.org/show_bug.cgi?id=755002