libpanel-applet/panel-applet.c
@@ -1807,7 +1807,7 @@ panel_applet_init (PanelApplet *applet)
 
 	applet->priv->builder = gtk_builder_new ();
 
-	gchar *xml = g_strdup_printf (panel_menu_ui, N_("_Remove From Panel"), N_("_Move"));
+	gchar *xml = g_strdup_printf (panel_menu_ui, _("_Remove From Panel"), _("_Move"));
 	gtk_builder_add_from_string (applet->priv->builder, xml, -1, NULL);
 	g_free (xml);
 
